# session-butler

./: .gitignore  Cargo.toml  LICENSE  ONBOARDING.md  README.md  archive.py  codex_scanner.py  compact.py  fts5_index.json  package-lock.json  package.json  summary_layer.json  summary_layer.py  write_summary_layer.py
.cargo/: config.toml
docs/: README.ko.md
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs
gui/src/lib/: Chart.svelte  api.ts
gui/src/lib/views/: Archive.svelte  Compact.svelte  Restore.svelte  Settings.svelte  Summarize.svelte
gui/src/routes/: +page.svelte
src/: archive.rs  cli.rs  compact.rs  config.rs  db.rs  error.rs  i18n.rs  insights.rs  lib.rs  main.rs  progress.rs  scanner.rs  summary.rs  tui.rs  types.rs  util.rs
