[package]
name = "session-butler"
version = "0.1.0"
edition = "2024"
description = "Codex/Hermes session file management tool"
authors = ["Kim Jeongjin"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# Compression
zstd = "0.13"

# File system operations
walkdir = "2.5"
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Text processing
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Progress bars
indicatif = "0.17"

# SHA256 for checksums
sha2 = "0.10"

# stdout/stderr 캡처 (TUI에서 명령 출력을 버퍼로 받기 위함)
gag = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
mockall = "0.13"

[[bin]]
name = "session-butler"
path = "src/main.rs"

[lib]
name = "session_butler"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
